[package]
name = "fuse-crates"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", default-features = false, features = ["std", "backtrace"] }
env_logger = "0.10.0"
flate2 = { version = "1.0.26", default-features = false, features = ["rust_backend"] }
fuser = { version = "0.12.0", default-features = false, features = ["abi-7-31", "libfuse"] }
libc = { version = "0.2.147", default-features = false, features = ["std", "extra_traits"] }
log = { version = "0.4.19", default-features = false, features = ["std"] }
tar = { version = "0.4.38", default-features = false, features = ["xattr"] }

